# smart-irrigation-system

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  ipconf.txt  mqtt_client.py
.qt/: QtDeploySupport.cmake
include/: app_controller.h  irrigation_logic.hpp
pi/: CMakeLists.txt
pi/include/: hardware_factory.hpp  i_pump_interface.hpp  i_sensor_interface.hpp  irrigation_logic.hpp  logger.hpp  mqtt_handler.hpp  real_hardware.hpp  simulated_hardware.hpp  state_machine.hpp
pi/src/: irrigation_logic.cpp  logger.cpp  main.cpp  mqtt_handler.cpp  real_hardware.cpp  simulated_hardware.cpp  state_machine.cpp
pi/tests/fixtures/: test_fixtures.hpp
pi/tests/integration/: test_watering_cycle.cpp
pi/tests/mocks/: mock_interfaces.hpp
pi/tests/unit/: test_irrigation_logic.cpp  test_state_machine.cpp
scripts/: deploy_and_test.sh
simulator/: simulator.h
src/: main.cpp
src/core/: app_controller.cpp  mqtt_client_qt.cpp  mqtt_client_qt.h
src/gui/: mainwindow.cpp  mainwindow.h
src/simulator/: simulator.cpp  simulator.h
